--- a/Neural_network_basic_training.ipynb
+++ b/Neural_network_basic_training.ipynb
@@ -99,11 +99,7 @@
       "metadata": {
         "id": "Jh0z6_gedrP9",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 90
-        },
-        "outputId": "90b3ea54-db8a-40dc-b24a-08e80313a09c"
+        "colab": {}
       },
       "source": [
         "# Creating the training and validation sets\n",
@@ -115,19 +111,8 @@
         "train_ds = tf.keras.preprocessing.image_dataset_from_directory(\n",
         "    data_dir, subset=\"training\", shuffle=True, **dataflow_kwargs)"
       ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Found 3670 files belonging to 5 classes.\n",
-            "Using 734 files for validation.\n",
-            "Found 3670 files belonging to 5 classes.\n",
-            "Using 2936 files for training.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -204,7 +189,7 @@
         "  layers.Dense(num_classes)\n",
         "])"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -220,7 +205,7 @@
         "  loss=tf.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
         "  metrics=['accuracy'])"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
